# uber-resolver

./: .gitignore  LICENSE  README.md  docker-compose.yaml
contracts/: README.md  openapi.yaml
docs/: ARCHITECTURE.md  REFERENCE_IMPLEMENTATIONS.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: WebVhResolver.tsx
frontend/src/lib/: resolver-api.ts
gateway/: README.md
resolvers/didwebvh-py/: Dockerfile  README.md  pyproject.toml
resolvers/didwebvh-py/src/uber_resolver_py/: __init__.py  app.py
resolvers/didwebvh-rs/: Cargo.toml  Dockerfile  README.md
resolvers/didwebvh-rs/src/: main.rs
resolvers/didwebvh-ts/: Dockerfile  README.md  package-lock.json  package.json
resolvers/didwebvh-ts/src/: server.mjs
resolvers/python/: README.md
resolvers/rust/: README.md
resolvers/typescript/: README.md
