[package]
name = "uber-resolver-didwebvh-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
description = "Thin HTTP resolver for did:webvh using didwebvh-rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
didwebvh-rs = { version = "0.5", default-features = false, features = ["network", "rustls"] }
